--- a/css/home.css
+++ b/css/home.css
@@ -471,10 +471,11 @@ body._lock {
 .teachers__title {
   font-size: clamp(1.5rem, 1.3rem + 1vw, 2.5rem);
   color: var(--accent-color);
-  margin-bottom: clamp(2.5rem, 0.714rem + 3.57vw, 5rem);
+  margin-bottom: 40px;
 }
 .teachers__cards {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   gap: clamp(3.75rem, -0.714rem + 8.93vw, 10rem);
 }
@@ -486,6 +487,7 @@ body._lock {
   align-items: center;
 }
 .teachers__photo {
+  padding: 10px;
   max-width: 300px;
   max-height: 300px;
   width: 100%;
@@ -496,7 +498,7 @@ body._lock {
 .teachers__about {
   max-width: 444px;
   width: 100%;
-  padding: 20px 30px;
+  padding: 20px 10px;
   text-align: center;
   background-color: var(--order-color1);
   border-radius: 50px;
@@ -540,28 +542,27 @@ body._lock {
 }
 .teachers__content-yellow, .teachers__content-blue {
   position: absolute;
-  max-width: 1200px;
-  width: 100%;
-  height: clamp(34.375rem, 30.561rem + 7.63vw, 40rem);
+  width: calc(100% - 30px);
+  height: clamp(36.25rem, 33.125rem + 6.25vw, 40.625rem);
   transition: 1.3s;
   z-index: 5;
   border-radius: 50px;
   overflow: hidden;
-  top: 110px;
+  top: 75px;
 }
 .teachers__content-yellow {
   right: -2500px;
   background-color: var(--order-color1);
 }
 .teachers__content-yellow.active {
-  right: 0;
+  right: 15px;
 }
 .teachers__content-blue {
   left: -2500px;
   background-color: var(--order-color2);
 }
 .teachers__content-blue.active {
-  left: 0;
+  left: 15px;
 }
 .teachers__close {
   position: absolute;
@@ -589,6 +590,7 @@ body._lock {
 }
 .teachers__swiper {
   position: relative;
+  overflow: visible;
 }
 .teachers__slide {
   background-color: var(--order-color1);
@@ -625,7 +627,8 @@ body._lock {
   padding: 20px 0 20px 0;
   font-size: 20px;
   line-height: 1.2;
-  text-indent: 50px;
+  text-indent: 30px;
+  text-align: justify;
 }
 .teachers__arrow-left {
   position: absolute;
@@ -647,17 +650,17 @@ body._lock {
   background-position: center center;
   background-size: contain;
   background-repeat: no-repeat;
+  z-index: 5;
 }
 .teachers__arrow-right:after, .teachers__arrow-left:after {
   content: "";
 }
 
 .reviews {
-  display: none;
+  padding-top: clamp(2.5rem, 1.75rem + 3.75vw, 6.25rem);
   overflow: hidden;
   position: relative;
-  min-height: 100vh;
-  padding-bottom: 100px;
+  padding-bottom: 200px;
   background-image: url(../images/reviews/reviews-bg.jpg);
   background-position: center center;
   background-size: cover;
@@ -666,12 +669,12 @@ body._lock {
 .reviews__title {
   font-size: clamp(1.5rem, 1.3rem + 1vw, 2.5rem);
   opacity: 0.8;
-  padding-top: 100px;
   padding-bottom: 10px;
 }
 .reviews__swiper {
   position: relative;
-  padding: 30px 0 50px;
+  padding: 30px 0 70px;
+  width: calc(100% - 30px);
 }
 .reviews__slide {
   display: flex;
@@ -680,8 +683,8 @@ body._lock {
   gap: clamp(1.25rem, 0.403rem + 1.69vw, 2.5rem) 15%;
 }
 .reviews__card {
-  width: 30%;
-  height: 37vh;
+  width: 30vw;
+  height: 310px;
   background-color: rgba(255, 255, 255, 0.6705882353);
   border-radius: 50px;
 }
@@ -714,14 +717,16 @@ body._lock {
 }
 .reviews__btn {
   position: absolute;
-  top: 40%;
+  bottom: 10%;
   left: 50%;
+  max-width: 266px;
+  width: 100%;
   transform: translateX(-50%);
   z-index: 15;
   display: inline-block;
   padding: 16px 32px;
   text-transform: uppercase;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 700;
   color: white;
   background: white;
@@ -754,11 +759,10 @@ body._lock {
 }
 
 .contacts {
-  display: none;
   width: 100%;
   position: relative;
-  padding-top: 100px;
-  padding-bottom: 150px;
+  padding-top: clamp(2.5rem, 1.75rem + 3.75vw, 6.25rem);
+  padding-bottom: clamp(2.5rem, 1.75rem + 3.75vw, 6.25rem);
   overflow: hidden;
 }
 .contacts__decor {
@@ -790,7 +794,7 @@ body._lock {
 .contacts__title {
   font-size: clamp(1.5rem, 1.3rem + 1vw, 2.5rem);
   color: var(--accent-color);
-  margin-bottom: 125px;
+  margin-bottom: clamp(3.125rem, 0.435rem + 6.15vw, 7.813rem);
 }
 .contacts__phone-link:hover {
   text-decoration: underline;
@@ -809,13 +813,16 @@ body._lock {
 }
 .contacts__img-box {
   position: relative;
+  background-image: url(../images/contacts/contact-img.jpg);
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
   max-width: 700px;
+  width: 100%;
+  height: 300px;
   border-radius: 50px;
   overflow: hidden;
-}
-.contacts__img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  z-index: 99;
 }
 
 .example-2 {
@@ -890,7 +897,6 @@ body._lock {
 }
 
 .contact__map {
-  display: none;
   position: relative;
   z-index: 50;
   display: block;
@@ -970,6 +976,48 @@ body._lock {
   .about__text {
     font-size: clamp(1rem, 0.955rem + 0.23vw, 1.125rem);
   }
+  .teachers__slide {
+    padding: 30px 40px;
+  }
+  .reviews__card {
+    height: 250px;
+    width: 380px;
+  }
+  .reviews__blockquote {
+    font-size: 15px;
+  }
+  .reviews__cite {
+    font-size: 14px;
+  }
+  .contact__map {
+    height: 150px;
+  }
+  .contact__map iframe {
+    width: 1200px;
+    height: 150px;
+  }
+  .footer {
+    padding: 30px 0;
+  }
+}
+@media (max-width: 960px) {
+  .teachers__text {
+    font-size: 18px;
+    width: 50%;
+  }
+  .teachers__slide-img {
+    width: 50%;
+  }
+  .teachers__arrow-right {
+    right: 15% !important;
+  }
+  .teachers__arrow-left {
+    left: 15% !important;
+  }
+  .contact__map iframe {
+    width: 960px;
+    height: 150px;
+  }
 }
 @media (max-width: 800px) {
   .about__slide:nth-child(even) .about__card {
@@ -987,22 +1035,52 @@ body._lock {
   .about__arrow-right, .about__arrow-left {
     display: none;
   }
+  .about__decor {
+    background-repeat: repeat-y;
+  }
   .teachers__cards {
     flex-direction: column;
     align-items: center;
+    gap: 30px;
+  }
+  .teachers__decor {
+    background-repeat: repeat-y;
   }
   .teachers__photo {
-    margin-bottom: 20px;
+    margin-bottom: 0px;
   }
   .teachers__cards-item[data-i=v] {
     background-color: var(--order-color1);
-    padding-top: 20px;
+    padding-top: 10px;
     border-radius: 30px;
   }
   .teachers__cards-item[data-i=ch] {
     background-color: var(--order-color2);
-    padding-top: 20px;
+    padding-top: 10px;
     border-radius: 30px;
+  }
+  .teachers__content-yellow {
+    top: 68px;
+  }
+  .teachers__content-blue {
+    top: 650px;
+  }
+  .teachers__content-yellow, .teachers__content-blue {
+    height: 552px;
+  }
+  .teachers__arrow-right, .teachers__arrow-left {
+    display: none;
+  }
+  .contact__map iframe {
+    width: 800px;
+    height: 150px;
+  }
+  .footer__logo-img {
+    display: none;
+  }
+  .footer__nav {
+    width: 100%;
+    justify-content: center;
   }
 }
 @media (max-width: 700px) {
@@ -1015,6 +1093,66 @@ body._lock {
   .about__card {
     padding: 20px;
     border-radius: 30px;
+  }
+  .contacts__container {
+    flex-direction: column;
+    gap: 10px;
+    padding: 0 30px;
+  }
+  .contacts__title {
+    position: relative;
+    z-index: 10;
+    margin-bottom: 10px;
+  }
+  .contacts__img-box {
+    width: 80%;
+    height: 200px;
+  }
+  .contacts__content {
+    gap: 10px;
+    background-color: var(--order-color2);
+  }
+  .contacts__content p, .contacts__content a {
+    display: block;
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+  }
+  .contacts__decor {
+    background-repeat: repeat;
+  }
+  .contact__map {
+    height: 100px;
+  }
+  .contact__map iframe {
+    width: 700px;
+    height: 100px;
+  }
+}
+@media (max-width: 600px) {
+  .teachers__slide {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .teachers__text {
+    width: 90%;
+    font-size: clamp(0.875rem, 0.589rem + 1.43vw, 1.125rem);
+  }
+  .teachers__slide-img {
+    height: 50%;
+  }
+  .reviews {
+    padding-bottom: 120px;
+  }
+  .reviews__pagination {
+    display: none;
+  }
+  .reviews__swiper {
+    padding: 20px 0;
+  }
+  .contact__map iframe {
+    width: 600px;
+    height: 100px;
   }
 }
 @media (max-width: 480px) {
@@ -1049,6 +1187,31 @@ body._lock {
     border-radius: 20px;
     height: auto;
   }
+  .teachers__slide-img:hover {
+    scale: 1;
+  }
+  .teachers__slide-img:active {
+    scale: 2;
+  }
+  .contacts__img-box {
+    display: none;
+  }
+  .contact__map iframe {
+    width: 480px;
+    height: 100px;
+  }
+  .footer__nav {
+    gap: 60px;
+  }
+  .footer-menu__link {
+    font-size: 16px;
+  }
+  .footer__bottom {
+    font-size: 11px;
+  }
+  .footer-menu__item + .footer-menu__item {
+    padding-top: 18px;
+  }
 }
 @media (max-width: 414px) {
   .about__slide {
@@ -1077,4 +1240,57 @@ body._lock {
     box-sizing: content-box;
     font-size: 14px;
   }
-}/*# sourceMappingURL=style.css.map */
+  .contacts__container {
+    gap: 10px;
+  }
+  .contacts__title {
+    margin-bottom: 5px;
+  }
+  .contacts__img-box {
+    width: 80%;
+    height: 150px;
+  }
+  .contacts__content p, .contacts__content a {
+    display: block;
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+  }
+  .contact__map iframe {
+    width: 414px;
+    height: 100px;
+  }
+}
+@media (max-width: 380px) {
+  .reviews__stars {
+    padding: 20px 0 15px;
+  }
+  .contacts__img-box {
+    display: none;
+  }
+  .contacts__content {
+    width: calc(100% - 30px);
+    padding-bottom: 10px;
+    padding-top: 10px;
+  }
+  .contacts__content p,
+  .contacts__content a {
+    font-size: 15px !important;
+  }
+  .example-2 .icon-content {
+    margin: 0 2px;
+  }
+  .contact__map {
+    height: 80px;
+  }
+  .contact__map iframe {
+    width: 380px;
+    height: 80px;
+  }
+}
+@media (max-width: 345px) {
+  .teachers__content-yellow,
+  .teachers__content-blue {
+    height: 565px;
+  }
+}/*# sourceMappingURL=home.css.map */
