--- a/css/home.css
+++ b/css/home.css
@@ -50,7 +50,7 @@ li {
   list-style: none;
 }
 
-body._lock {
+body.lock {
   overflow: hidden;
 }
 
@@ -1053,6 +1053,9 @@ body._lock {
   }
   .hero__subtitle {
     font-size: 30px;
+  }
+  .phone {
+    display: none;
   }
 }
 @media (max-width: 800px) {
