--- a/css/home.css
+++ b/css/home.css
@@ -102,8 +102,6 @@
 
 .hero__btn {
   margin: 0 auto;
-  max-width: 350px;
-  width: 100%;
   padding: 24px 36px;
   font-weight: 600;
   font-size: 24px;
@@ -220,15 +218,13 @@
 }
 
 .courses {
-  display: none;
+  padding-top: clamp(2.5rem, 1.75rem + 3.75vw, 6.25rem);
+  padding-bottom: clamp(2.5rem, 1.75rem + 3.75vw, 6.25rem);
   position: relative;
-  padding-top: 100px;
   background-image: url(../images/course/Paris.jpg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100vh;
-  cursor: pointer;
 }
 .courses__mask, .courses__right {
   position: absolute;
@@ -240,21 +236,62 @@
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  cursor: pointer;
 }
 .courses__mask {
   background-image: url(../images/course/London-mask.png);
-  z-index: 5;
-}
-.courses__right {
-  background-image: url(../images/course/london-full.jpg);
-  z-index: 5;
+  z-index: 0;
 }
 .courses__title {
   font-size: clamp(1.5rem, 1.3rem + 1vw, 2.5rem);
   position: relative;
   z-index: 10;
-  color: #fff;
+  margin-bottom: 50px;
+}
+.courses__english, .courses__france {
+  padding: 30px;
+  border-radius: 50px;
+  width: 48%;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+.courses__text {
+  text-align: justify;
+  -webkit-hyphens: auto;
+          hyphens: auto;
+  text-indent: 30px;
+  line-height: 1.3;
+}
+.courses__btn {
+  text-align: center;
+  display: block;
+  line-height: 1.3;
+  max-width: 266px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 16px 32px;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 700;
+  color: white;
+  background: white;
+  cursor: pointer;
+  transition: ease-out 0.5s;
+  box-shadow: inset 0 100px 0 0 var(--accent-color);
+}
+.courses__btn:active {
+  transform: scale(0.9) translateX(-50%);
+}
+
+.courses-content {
+  display: flex;
+  gap: 5%;
+  margin-bottom: 50px;
+}
+.courses-content__title {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 800;
+  color: var(--accent-color);
+  margin-bottom: 30px;
 }
 
 .teachers {
@@ -827,6 +864,16 @@
   .about__decor {
     background-repeat: repeat-y;
   }
+  .courses__english, .courses__france {
+    width: calc(100% - 30px);
+  }
+  .courses-content {
+    justify-content: center;
+    gap: 30px;
+  }
+  .courses-content {
+    flex-wrap: wrap;
+  }
   .teachers__cards {
     flex-direction: column;
     align-items: center;
@@ -938,6 +985,15 @@
   .hero__image-2 {
     display: none;
   }
+  .courses {
+    background-position: 30% center;
+  }
+  .courses__mask {
+    width: 50vw;
+    background-image: url(../images/course/london-full.jpg);
+    left: auto;
+    background-position: 75% center;
+  }
   .teachers__slide {
     flex-direction: column;
     gap: 5px;
@@ -988,6 +1044,9 @@
     border-radius: 20px;
     height: auto;
   }
+  .courses__mask {
+    width: 100%;
+  }
   .contacts__img-box {
     display: none;
   }
@@ -1006,7 +1065,8 @@
   }
 }
 @media (max-width: 415px) {
-  .hero__image-1, .hero__image-2 {
+  .hero__image-1,
+  .hero__image-2 {
     height: 130px;
     top: auto;
     bottom: 20px;
@@ -1058,6 +1118,9 @@
   }
 }
 @media (max-width: 380px) {
+  .courses__text {
+    font-size: 16px;
+  }
   .reviews__stars {
     padding: 20px 0 15px;
   }
