--- a/css/news.css
+++ b/css/news.css
@@ -1,101 +1,1 @@
-
-.hero {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  background-image: url(../images/hero/BG-hero.jpg);
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.hero__spot-blue {
-  position: absolute;
-  background-image: url(../images/hero/spot-blue.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: left center;
-  max-width: clamp(18.75rem, 6.886rem + 23.73vw, 36.25rem);
-  width: 100%;
-  top: clamp(6.25rem, 1.165rem + 10.17vw, 13.75rem);
-  left: 15px;
-  height: 60%;
-  bottom: 0;
-  z-index: 1;
-}
-.hero__image-1 {
-  position: absolute;
-  background-image: url(../images/eifel-v.png);
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  max-width: 250px;
-  width: 100%;
-  top: 0;
-  left: 100px;
-  bottom: 0;
-  z-index: 2;
-}
-.hero__spot-yellow {
-  position: absolute;
-  background-image: url(../images/hero/spot-yellow.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: right center;
-  max-width: clamp(18.75rem, 6.886rem + 23.73vw, 36.25rem);
-  width: 100%;
-  height: 60%;
-  top: clamp(6.25rem, 1.165rem + 10.17vw, 13.75rem);
-  right: 15px;
-  bottom: 0;
-  z-index: 1;
-}
-.hero__image-2 {
-  position: absolute;
-  background-image: url(../images/big-ben-v.png);
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  max-width: 220px;
-  width: 100%;
-  top: 0;
-  right: 90px;
-  bottom: 0;
-  z-index: 2;
-}
-
-.hero-container {
-  min-height: 100vh;
-  position: relative;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.hero__title {
-  margin-bottom: 20px;
-  position: relative;
-  text-align: center;
-  font-family: var(--font-order-title);
-  font-size: clamp(3.125rem, 2.185rem + 4.7vw, 8rem);
-  font-weight: 900;
-  line-height: 1.2;
-  text-transform: uppercase;
-  color: #fff;
-  z-index: 2;
-  word-spacing: 20px;
-}
-
-.hero__subtitle {
-  position: relative;
-  margin-bottom: 8vh;
-  font-family: "Montserrat", sans-serif;
-  font-size: clamp(1.75rem, 1.65rem + 0.5vw, 2.25rem);
-  line-height: clamp(2.625rem, 2.45rem + 0.88vw, 3.5rem);
-  font-weight: 900;
-  text-align: center;
-  text-transform: uppercase;
-  color: #fff;
-  z-index: 2;
-  text-shadow: 0 4px 15px rgba(0, 0, 0, 0.0666666667);
-}/*# sourceMappingURL=news.css.map */
+/*# sourceMappingURL=news.css.map */
