--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,203 @@
+:root {
+  --accent-color: #fa9250;
+  --order-color1: #ffe57b;
+  --order-color2: #9bede4;
+  --font-order-title: "Vollkorn", serif;
+  --font-title: "Montserrat", sans-serif;
+  --font-base: "Open Sans", sans-serif;
+}
+
+
+html {
+  scroll-behavior: smooth;
+}
+html *,
+html *::after,
+html *::before {
+  box-sizing: border-box;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+img {
+  display: inline-block;
+}
+
+body {
+  position: relative;
+  box-sizing: inherit;
+  font-family: var(--font-base);
+  font-weight: 400;
+  font-size: 18px;
+  color: #3a3a3a;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+}
+
+li {
+  list-style: none;
+}
+
+body.lock {
+  overflow: hidden;
+}
+
+.container {
+  position: relative;
+  max-width: 1230px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.btn {
+  position: relative;
+  display: block;
+  text-align: center;
+  background-color: var(--accent-color);
+  border-radius: 20px;
+  color: #fff;
+  font-family: var(--font-title);
+  text-transform: uppercase;
+}
+.btn:hover {
+  color: var(--accent-color);
+  box-shadow: inset 0 0 0 0 var(--accent-color);
+}
+.btn:active {
+  transform: scale(0.9);
+}
+
+.h3 {
+  font-size: 40px;
+  font-weight: 900;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.waves-decor {
+  position: absolute;
+  width: 100%;
+  background-image: url(../images/waves_decor.png);
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.hidden {
+  display: none;
+}
+
+.color-gray {
+  color: #3a3a3a !important;
+  opacity: 0.8;
+}
+
+.header {
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 0;
+  z-index: 5;
+  padding-bottom: 40px;
+}
+
+.wrapper__menu {
+  padding-top: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  position: relative;
+  z-index: 25;
+}
+
+.menu-icon {
+  display: none;
+}
+@media (max-width: 1200px) {
+  .menu-icon {
+    position: relative;
+    display: block;
+    height: 18px;
+    width: 30px;
+    z-index: 5;
+    cursor: pointer;
+  }
+  .menu-icon span {
+    transition: all 0.3s ease 0s;
+    top: calc(50% - 1px);
+    right: 60%;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: var(--accent-color);
+    filter: drop-shadow(0 5px 8px rgba(0, 0, 0, 0.4));
+  }
+  .menu-icon span:first-child {
+    top: 0;
+  }
+  .menu-icon span:last-child {
+    top: auto;
+    bottom: 0;
+  }
+  .menu-icon.active span {
+    background-color: #fff;
+    transform: scale(0);
+  }
+  .menu-icon.active span:first-child {
+    transform: rotate(-45deg);
+    top: calc(50% - 1px);
+  }
+  .menu-icon.active span:last-child {
+    transform: rotate(45deg);
+    bottom: calc(50% - 1px);
+  }
+}
+
+.menu__list {
+  font-size: 18px;
+  letter-spacing: 1px;
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+
+.menu__list-item {
+  transition: color 0.5s ease;
+  color: var(--accent-color);
+  text-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
+}
+
+.menu__list-item:hover {
+  color: #fff;
+}
+
+.phone {
+  margin-left: 30px;
+  color: var(--accent-color);
+  transition: all 0.5s ease;
+  filter: drop-shadow(0 5px 8px rgba(0, 0, 0, 0.4));
+}
+.phone:hover {
+  color: #fff;
+  scale: 1.05;
+}
 
 .hero {
   position: relative;
@@ -102,6 +302,8 @@
 
 .hero__btn {
   margin: 0 auto;
+  max-width: 350px;
+  width: 100%;
   padding: 24px 36px;
   font-weight: 600;
   font-size: 24px;
@@ -218,13 +420,15 @@
 }
 
 .courses {
-  padding-top: clamp(2.5rem, 1.75rem + 3.75vw, 6.25rem);
-  padding-bottom: clamp(2.5rem, 1.75rem + 3.75vw, 6.25rem);
+  display: none;
   position: relative;
+  padding-top: 100px;
   background-image: url(../images/course/Paris.jpg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
+  height: 100vh;
+  cursor: pointer;
 }
 .courses__mask, .courses__right {
   position: absolute;
@@ -236,60 +440,21 @@
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
+  cursor: pointer;
 }
 .courses__mask {
   background-image: url(../images/course/London-mask.png);
-  z-index: 0;
+  z-index: 5;
+}
+.courses__right {
+  background-image: url(../images/course/london-full.jpg);
+  z-index: 5;
 }
 .courses__title {
   font-size: clamp(1.5rem, 1.3rem + 1vw, 2.5rem);
   position: relative;
   z-index: 10;
-  margin-bottom: 50px;
-}
-.courses__english, .courses__france {
-  padding: 30px;
-  border-radius: 50px;
-  width: 48%;
-  background-color: rgba(255, 255, 255, 0.7);
-}
-.courses__text {
-  text-align: justify;
-  text-indent: 30px;
-  line-height: 1.3;
-}
-.courses__btn {
-  text-align: center;
-  display: block;
-  line-height: 1.3;
-  max-width: 266px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 16px 32px;
-  text-transform: uppercase;
-  font-size: 20px;
-  font-weight: 700;
-  color: white;
-  background: white;
-  cursor: pointer;
-  transition: ease-out 0.5s;
-  box-shadow: inset 0 100px 0 0 var(--accent-color);
-}
-.courses__btn:active {
-  transform: scale(0.9) translateX(-50%);
-}
-
-.courses-content {
-  display: flex;
-  gap: 9%;
-  margin-bottom: 50px;
-}
-.courses-content__title {
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: 800;
-  color: var(--accent-color);
-  margin-bottom: 30px;
+  color: #fff;
 }
 
 .teachers {
@@ -550,7 +715,6 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: clamp(1.25rem, 0.403rem + 1.69vw, 2.5rem) 15%;
-  margin-bottom: 40px;
 }
 .reviews__card {
   width: 30vw;
@@ -569,7 +733,6 @@
   gap: 25px;
   bottom: 0px !important;
   z-index: 50;
-  margin-bottom: 50px;
 }
 .reviews__blockquote {
   padding: 0 30px 42px;
@@ -776,9 +939,74 @@
   height: 200px;
 }
 
+.footer {
+  background: linear-gradient(90deg, #f4b93f, #9bede4);
+  padding-top: 50px;
+  padding-bottom: 50px;
+  color: #fff;
+}
+.footer__top {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+.footer__nav {
+  width: 60%;
+  display: flex;
+  justify-content: start;
+  gap: 175px;
+  margin-bottom: 40px;
+}
+.footer__bottom {
+  display: flex;
+  justify-content: space-between;
+  font-size: 13px;
+  text-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
+}
+
+.footer-menu__item + .footer-menu__item {
+  padding-top: 10px;
+}
+.footer-menu__item {
+  font-weight: 900;
+  text-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
+}
+.footer-menu__item:hover {
+  color: var(--order-color2);
+}
 @media (max-width: 1200px) {
   .header {
     padding-top: 0px;
+  }
+  .menu {
+    padding-top: 30px;
+    position: absolute;
+    top: -1300px;
+    left: 0;
+    padding: 100px 20px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    gap: 50px;
+    justify-content: center;
+    background-color: var(--accent-color);
+    height: 100vh;
+    width: 100%;
+    transition: all ease-out 1s;
+  }
+  .menu__list {
+    padding-top: 30px;
+    flex-direction: column;
+  }
+  .menu.active {
+    top: 0px;
+  }
+  .menu.active + a {
+    color: #fff;
+    transition: all 2s;
+  }
+  .menu__list-link {
+    color: #fff;
   }
   .about__text {
     font-size: clamp(1rem, 0.955rem + 0.23vw, 1.125rem);
@@ -861,22 +1089,6 @@
   }
   .about__decor {
     background-repeat: repeat-y;
-  }
-  .courses__english, .courses__france {
-    width: calc(100% - 30px);
-  }
-  .courses__france {
-    order: 2;
-  }
-  .courses__english {
-    order: 3;
-  }
-  .courses-content {
-    justify-content: center;
-    gap: 30px;
-  }
-  .courses-content {
-    flex-wrap: wrap;
   }
   .teachers__cards {
     flex-direction: column;
@@ -979,25 +1191,6 @@
   }
 }
 @media (max-width: 600px) {
-  .hero__spot-blue,
-  .hero__spot-yellow {
-    display: none;
-  }
-  .hero__image-1 {
-    display: none;
-  }
-  .hero__image-2 {
-    display: none;
-  }
-  .courses {
-    background-position: 30% center;
-  }
-  .courses__mask {
-    width: 50vw;
-    background-image: url(../images/course/london-full.jpg);
-    left: auto;
-    background-position: 75% center;
-  }
   .teachers__slide {
     flex-direction: column;
     gap: 5px;
@@ -1030,6 +1223,16 @@
   .wrapper__menu {
     padding-top: 20px;
   }
+  .hero__spot-blue,
+  .hero__spot-yellow {
+    display: none;
+  }
+  .hero__image-1 {
+    display: none;
+  }
+  .hero__image-2 {
+    display: none;
+  }
   .hero__btn {
     max-width: 250px;
     padding: 12px 18px;
@@ -1047,9 +1250,6 @@
     padding: 10px;
     border-radius: 20px;
     height: auto;
-  }
-  .courses__mask {
-    width: 100%;
   }
   .contacts__img-box {
     display: none;
@@ -1069,8 +1269,7 @@
   }
 }
 @media (max-width: 415px) {
-  .hero__image-1,
-  .hero__image-2 {
+  .hero__image-1, .hero__image-2 {
     height: 130px;
     top: auto;
     bottom: 20px;
@@ -1122,9 +1321,6 @@
   }
 }
 @media (max-width: 380px) {
-  .courses__text {
-    font-size: 16px;
-  }
   .reviews__stars {
     padding: 20px 0 15px;
   }
