--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,2 @@
-@import url(./general.css);
-@import url(./header.css);
 @import url(./home.css);
-@import url(./news.css);
-@import url(./footer.css);/*# sourceMappingURL=index.css.map */
+@import url(./news.css);/*# sourceMappingURL=index.css.map */
