--- a/css/gallery.css
+++ b/css/gallery.css
@@ -25,7 +25,7 @@
   text-shadow: 0 4px 15px rgba(0, 0, 0, 0.0666666667);
 }
 
-.hero-container {
+.gallery-container {
   min-height: 100vh;
   position: relative;
   width: 100%;
